updated to latest webpack v plus added style loader

--- a/02-webpack-boiler/src/index.html
+++ b/02-webpack-boiler/src/index.html
@@ -7,6 +7,6 @@
     <title>My App Example</title>
   </head>
   <body>
-    Hello World !
+    <h1 class="my-text">Hello World !</h1>
   </body>
 </html>
